--- a/angular.json
+++ b/angular.json
@@ -66,10 +66,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "WeatherForecastAngular:build:production"
+              "buildTarget": "WeatherForecastAngular:build:production"
             },
             "development": {
-              "browserTarget": "WeatherForecastAngular:build:development"
+              "buildTarget": "WeatherForecastAngular:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -77,7 +77,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "WeatherForecastAngular:build"
+            "buildTarget": "WeatherForecastAngular:build"
           }
         },
         "test": {
