feat: add PrimeFlex and configure imports

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
                 "bundleName": "light",
                 "inject": false
               },
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": [],
             "browser": "src/main.ts"
