--- a/angular.json
+++ b/angular.json
@@ -22,17 +22,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.css",
-              {
-                "input": "primeng/resources/themes/mdc-dark-deeppurple/theme.css",
-                "bundleName": "dark",
-                "inject": false
-              },
-              {
-                "input": "primeng/resources/themes/mdc-light-deeppurple/theme.css",
-                "bundleName": "light",
-                "inject": false
-              },
-              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
               "node_modules/primeflex/primeflex.css"
             ],
             "scripts": [],
