--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.7",
-    "@angular/common": "^19.2.7",
-    "@angular/compiler": "^19.2.7",
-    "@angular/core": "^19.2.7",
-    "@angular/forms": "^19.2.7",
-    "@angular/platform-browser": "^19.2.7",
-    "@angular/platform-browser-dynamic": "^19.2.7",
-    "@angular/router": "^19.2.7",
-    "@primeng/themes": "^19.1.0",
+    "@angular/animations": "^20.3.6",
+    "@angular/common": "^20.3.6",
+    "@angular/compiler": "^20.3.6",
+    "@angular/core": "^20.3.6",
+    "@angular/forms": "^20.3.6",
+    "@angular/platform-browser": "^20.3.6",
+    "@angular/platform-browser-dynamic": "^20.3.6",
+    "@angular/router": "^20.3.6",
+    "@primeng/themes": "^20.2.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primeng": "^19.1.0",
+    "primeng": "^20.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.8",
-    "@angular/cli": "~19.2.8",
-    "@angular/compiler-cli": "^19.2.7",
+    "@angular/build": "^20.3.6",
+    "@angular/cli": "~20.3.6",
+    "@angular/compiler-cli": "^20.3.6",
     "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "jest-preset-angular": "^14.5.5",
+    "jest": "^30.2.0",
+    "jest-preset-angular": "15.0.3",
     "typescript": "~5.8.3"
   }
 }
