--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -2,8 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "module": "CommonJs",
-    "types": ["jest"]
+    "types": ["jest", "node"]
   },
-  "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
+  "files": ["src/setup.jest.ts"],
+  "include": ["src/**/*.spec.ts", "src/**/*.ts"]
 }
